...

    /// Create an instance of `AMLMapView`
    /// - Parameter mapState: Object to track state changes.
    public init(mapState: AMLMapViewState = .init()) {
        self.mapState = mapState
        self.mapSettings = AMLMapViewSettings()
        if let mapView = mapState.mapView {
            mapLoadingState.state = .complete(mapView)
        }
    }

    /// Create an instance of `AMLMapView`.
    ///
...
                    .accessibility(identifier: "amlmapview")

                VStack {
                    Spacer()
                    AMLMapAttributionView(
                        isAttributionTextDisplayed: $mapState.isAttributionTextDisplayed,
                        attributionText: mapState.attribution
                    )
                }
            }
        case .error(let error):
            Text("Error loading view: \(error.localizedDescription)")
        case .begin:
...
